--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
 		<button id="takeVideo">Take Video</button>
 		<div id="videoArea"></div>
 
-	<script src="cordova.js"></script>	
+	<script src="../cordova.js"></script>	
 	<script src="js/app.js"></script>
 	</body>
 </html>
