--- a/www/index.html
+++ b/www/index.html
@@ -28,7 +28,7 @@
 
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
+    <script src="../platforms/android/platforms_www/cordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
